# attool

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/scripts/: app-icon.test.mjs  build-latest-json.mjs  build-latest-json.test.mjs  sign-checksums.mjs  stage-bundles.sh  stage-bundles.test.mjs  tauri-config.test.mjs
.github/workflows/: build.yml
docs/spec/: architecture.md  overview.md  ui-design-system.md
docs/superpowers/plans/: 2026-05-07-ecommerce-template.md  2026-05-08-property-panel-layout.md  2026-05-08-template-editor-design-tool.md  2026-05-10-auto-updater.md  2026-05-10-ui-restyle-mono-dark.md  2026-05-15-clipboard-history-tool.md  2026-05-16-json-tool.md  2026-07-07-douyin-link-tool.md
docs/superpowers/specs/: 2026-05-07-ecommerce-template-design.md  2026-05-08-property-panel-layout-design.md  2026-05-08-template-editor-design-tool-design.md  2026-05-10-auto-updater-design.md  2026-05-10-ui-restyle-design.md  2026-05-15-clipboard-history-tool-design.md  2026-05-16-json-tool-design.md  2026-07-07-douyin-link-tool-design.md  2026-07-07-douyin-video-extract-design.md  (+2 more)
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/python/: psd_template_bridge.py  psd_template_bridge_test.py
src-tauri/src/: bilibili.rs  douyin.rs  http.rs  lib.rs  main.rs  qrcode.rs  xhs.rs  youtube.rs
src-tauri/src/clipboard/: commands.rs  mod.rs  models.rs  storage.rs  watcher.rs
src-tauri/src/ecommerce/: batch.rs  commands.rs  mod.rs  models.rs  psd_bridge.rs  render.rs  storage.rs
src-tauri/src/http/: cancel.rs  commands.rs  mod.rs  models.rs  send.rs  storage.rs
src-tauri/src/http/stream/: buffer.rs  commands.rs  mod.rs  parser.rs  session.rs  sse.rs  ws.rs
src-tauri/src/imaging/: capture.rs  commands.rs  compress.rs  convert.rs  exif.rs  mod.rs  ocr.rs  windows.rs
src-tauri/src/network/: commands.rs  dns.rs  mod.rs  ping.rs  port.rs
src-tauri/src/updater/: check.rs  commands.rs  download.rs  keys.rs  mod.rs  models.rs  state.rs  verify.rs
src-tauri/src/updater/apply/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/updater/scripts/: install-linux.sh  update-windows.bat
src-tauri/tests/: ecommerce_batch.rs  ecommerce_psd_bridge.rs  ecommerce_render.rs  ecommerce_storage.rs  stream_it.rs
src/components/: TaskCard.vue
src/components/http/: SseTool.vue  (+22 more)
src/composables/: useAria2Handoff.test.ts  useAria2Handoff.ts  useClipboardHistory.test.ts  useClipboardHistory.ts  useCommandPalette.test.ts  useCommandPalette.ts  useFileDrop.test.ts  useFileDrop.ts  useHttpStore.collections.test.ts  useHttpStore.stream.test.ts  useHttpStore.ts  useJsonWorker.test.ts  useJsonWorker.ts  useLastTool.test.ts  useLastTool.ts  useMonacoLoader.ts  useSidebarState.test.ts  useSidebarState.ts  useTheme.test.ts  useTheme.ts  useUpdater.test.ts  useUpdater.ts  useUpdaterPrefs.test.ts  useUpdaterPrefs.ts
src/styles/: clipboard.css  reset.css  template-editor.css  tokens.css
src/theme/: index.test.ts  index.ts
src/types/: clipboard.ts  douyin.ts  download.ts  ecommerceTemplate.ts  json.ts  tool.test.ts  tool.ts
src/utils/: clipboardHistory.test.ts  clipboardHistory.ts  codec.test.ts  codec.ts  douyinLink.test.ts  douyinLink.ts  downloadFormat.test.ts  downloadFormat.ts  ecommerceTemplate.test.ts  ecommerceTemplate.ts  generators.test.ts  generators.ts  jsonConvert.test.ts  jsonConvert.ts  jsonFormat.test.ts  jsonFormat.ts  jsonTreeFlatten.test.ts  jsonTreeFlatten.ts  jsonWorkerHandlers.test.ts  jsonWorkerHandlers.ts  jsondiff.test.ts  jsondiff.ts  platformDetect.ts  textTools.test.ts  textTools.ts  timeTools.test.ts  timeTools.ts
src/workers/: globalShim.ts  jsonWorker.ts
(+83 files in other folders)
