[package]
name = "attool"
version = "0.1.0"
description = "Personal desktop tools powered by Tauri"
authors = ["attson"]
edition = "2021"

[lib]
name = "attool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
calamine = "0.34"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
dirs = "6"
image = "0.25"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["io-util", "macros", "process", "sync"] }
uuid = { version = "1", features = ["v4", "serde"] }
