[package]
name = "attool"
version = "0.8.2"
description = "Personal desktop tools powered by Tauri"
authors = ["attson"]
edition = "2021"

[lib]
name = "attool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
imageproc = "0.26"
fontdb = "0.23"
ab_glyph = "0.2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
image = "0.25"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["io-util", "macros", "process", "sync"] }
uuid = { version = "1", features = ["v4", "serde"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "gzip"] }
percent-encoding = "2"
url = "2"
kamadak-exif = "0.5"
qrcode = { version = "0.14", default-features = false, features = ["image"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
